--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/start_service"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -39,18 +39,19 @@
         android:layout_marginTop="8dp"
         android:text="@string/broadcast"
         android:onClick="onBroadcastClick"
-        app:layout_constraintEnd_toEndOf="@+id/button2"
-        app:layout_constraintStart_toStartOf="@+id/button2"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintEnd_toEndOf="@+id/start_service"
+        app:layout_constraintStart_toStartOf="@+id/start_service"
+        app:layout_constraintTop_toBottomOf="@+id/start_service" />
 
     <Button
-        android:id="@+id/button4"
-        android:onClick="onStopServiceClick"
+        android:id="@+id/stop_service"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="onServiceClick"
         android:text="@string/stop_service"
-        app:layout_constraintStart_toEndOf="@+id/button2"
-        tools:layout_editor_absoluteY="64dp" />
+        app:layout_constraintStart_toEndOf="@+id/start_service"
+        app:layout_constraintTop_toTopOf="@+id/start_service" />
 
 </android.support.constraint.ConstraintLayout>
