--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,11 +37,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/broadcast"
         android:onClick="onBroadcastClick"
-        app:layout_constraintEnd_toEndOf="@+id/start_service"
-        app:layout_constraintStart_toStartOf="@+id/start_service"
-        app:layout_constraintTop_toBottomOf="@+id/start_service" />
+        android:text="@string/broadcast"
+        app:layout_constraintEnd_toEndOf="@+id/stop_service"
+        app:layout_constraintHorizontal_bias="0.16"
+        app:layout_constraintStart_toStartOf="@+id/stop_service"
+        app:layout_constraintTop_toBottomOf="@+id/stop_service" />
 
     <Button
         android:id="@+id/stop_service"
@@ -51,7 +52,20 @@
         android:layout_marginTop="8dp"
         android:onClick="onServiceClick"
         android:text="@string/stop_service"
-        app:layout_constraintStart_toEndOf="@+id/start_service"
-        app:layout_constraintTop_toTopOf="@+id/start_service" />
+        app:layout_constraintStart_toStartOf="@+id/start_service"
+        app:layout_constraintTop_toBottomOf="@+id/start_service" />
+
+    <Button
+        android:id="@+id/binding_service"
+        android:onClick="onBindingServiceClick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/binding_service"
+        app:layout_constraintEnd_toEndOf="@+id/button3"
+        app:layout_constraintStart_toStartOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
 
 </android.support.constraint.ConstraintLayout>
