--- a/app/src/main/res/layout/activity_for_fragments_testing.xml
+++ b/app/src/main/res/layout/activity_for_fragments_testing.xml
@@ -14,12 +14,13 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Button"
+        android:onClick="onButtonClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <fragment
-        android:id="@+id/fragment"
+        android:id="@+id/fragment_placeholder"
         android:name="com.sserdiuk.androidprincipies.TestFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
