--- a/app/src/main/res/layout/fragment_test_fragment_two.xml
+++ b/app/src/main/res/layout/fragment_test_fragment_two.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/test_fragment_two"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,8 +8,15 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/tv_fragment2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="TEst fragment two" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btn_fragment2"
+        android:layout_below="@id/tv_fragment2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
