--- a/app/src/main/res/layout/activity_for_fragments_testing.xml
+++ b/app/src/main/res/layout/activity_for_fragments_testing.xml
@@ -30,4 +30,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+    <GridLayout
+        android:id="@+id/fragment_container_placeholder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_placeholder" />
 </android.support.constraint.ConstraintLayout>
