--- a/app/src/main/res/layout/activity_services_examples.xml
+++ b/app/src/main/res/layout/activity_services_examples.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".StartAndroidServicesActivityExamples">
 
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="368dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
+
     <Button
         android:id="@+id/button_start_service"
         android:layout_width="wrap_content"
@@ -94,4 +107,15 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="onBroadcastClick"
+        android:text="@string/startandroidbroadcastexample"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider2" />
 </android.support.constraint.ConstraintLayout>
